# tuitui

./: .gitignore  Cargo.toml  README.md
data/: README.md
src/: bird.rs  database.rs  footer.rs  home.rs  main.rs  menu.rs  menuitem.rs
