[package]
name = "tuitui"
version = "0.2.0"
authors = ["kodeaffe <lahi+kodeaffe@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
termion = "1.5"
tui = "0.15"
thiserror = "1.0"
